Настроны подключение и аутентификация websocket
